--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!------------------------ about ---------------------------------->
     <section id="about">
-        <img src="Ed_sheeran.png" alt="" id="proflie">
+        <img src="code guy.jpg" alt="" id="proflie">
         
         <h1>About <span>Me  &#128519</span></h1>    
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure earum tempora mollitia fugit at doloribus nihil error, obcaecati vero minima libero temporibus, suscipit distinctio sint aut nesciunt quisquam optio nemo incidunt consequatur, doloremque impedit totam officia illum. Non tempora impedit dicta natus labore,<br>
@@ -43,7 +43,7 @@
     <section id="projects">
         <h1><span>My</span> Projects</h1>
         <div class="image">
-        <a href="Text-to-Speech/ttv_index.html" target="_blank"   ><img src="ttv.png" alt=""></a>
+        <a href="Text-to-Speech/ttv_index.html" target="_blank"><img src="ttv.png" alt=""></a>
         <a href="project1.html" target="_blank"><img src="project1.png" alt=""></a>
         <a href="Voice to text/vtt_index.html" target="_blank"><img src="vtt.png" alt=""></a>
         </div>
